--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I'm studying VLFeat library for feature descriptors. These functions are almost directly from www.vlfeat.org tutorials.
+I'm studying VLFeat library for feature descriptors. These functions are almost directly from www.vlfeat.org tutorials. Check VLFeat website for licensing and usage of the library.
